<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>

    <string name="act_main_window_name_hint">Window name</string>
    <string name="act_main_welcome">Welcome on faircorp, <br /> the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>

    <string name="menu_windows">Building windows</string>
    <string name="menu_heaters">Building heaters</string>
    <string name="menu_rooms">Building rooms</string>

    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target temperature</string>
    <string name="act_window_room_current_temp">Current temperature</string>
    <string name="act_window_status">Status</string>

    <string name="act_view_room_name">Room name</string>
    <string name="act_view_room_type">Type</string>
    <string name="act_view_room_level">Level</string>

    <string name="act_view_Heater_name">Heater name</string>
    <string name="act_view_heater_power">Power</string>
    <string name="act_view_heater_status">Status</string>

</resources>